33 add update endpoints (#38)
* Added realm update

* Added soft-delete endpoint for realms

* Defined new realm endpoints in schema

* Refactored relationship between roles and realms

* Updated roles queries to be many-to-one

* Fixed login related queries

* Added patch endpoint for roles

* Added soft delete endpoint

* Updated openapi yaml
