# simple-auth-model/src/lib.rs
@@ -1,5 +1,3 @@
-mod realm;
-mod role;
 mod password;
 mod email;
 mod ip_address;
@@ -13,6 +11,8 @@ pub mod user;
 pub mod encoding;
 pub mod config;
 pub mod auth;
+pub mod realm;
+pub mod role;
 
 // re-exports
 pub use chrono;
