# simple-auth-web/src/api/realm_api.rs
@@ -1,6 +1,7 @@
-use actix_web::{get, HttpResponse, post, Responder, web};
+use actix_web::{delete, get, HttpResponse, patch, post, Responder, web};
 use actix_web::http::StatusCode;
-use actix_web::web::ServiceConfig;
+use actix_web::web::{delete, ServiceConfig};
+use simple_auth_model::realm::UpdateRealm;
 use crate::api::{HttpContext, WebApi};
 use crate::di::{ServiceFactory, TransientFactory};
 use crate::dto::ProblemDetails;
@@ -13,6 +14,8 @@ impl WebApi for RealmApi {
         cfg.service(get_all);
         cfg.service(get_by_id);
         cfg.service(add);
+        cfg.service(update);
+        cfg.service(delete_by_id);
     }
 }
 
@@ -49,4 +52,18 @@ async fn add(realm: web::Json<String>, factory: web::Data<ServiceFactory<'_>>) -
             }
         }
     }
+}
+
+#[patch("/realm")]
+async fn update(update: web::Json<UpdateRealm>, factory: web::Data<ServiceFactory<'_>>) -> impl Responder {
+    let service: RealmService = factory.get_transient();
+    let result = service.update(update.into_inner()).await;
+    HttpContext::accepted(result)
+}
+
+#[delete("/realm/{id}")]
+async fn delete_by_id(id: web::Path<String>, factory: web::Data<ServiceFactory<'_>>) -> impl Responder {
+    let service: RealmService = factory.get_transient();
+    let result = service.soft_delete_by_id(id.as_str()).await;
+    HttpContext::no_content(result)
 }
