# simple-auth-web/src/api/role_api.rs
@@ -1,9 +1,9 @@
-use actix_web::{get, HttpResponse, post, Responder, web};
-use actix_web::http::StatusCode;
+use actix_web::{delete, get, patch, post, Responder, web};
 use actix_web::web::{ServiceConfig};
+use simple_auth_model::role::RoleUpdate;
 use crate::api::{HttpContext, WebApi};
 use crate::di::{ServiceFactory, TransientFactory};
-use crate::dto::{AddRoleDto, ProblemDetails};
+use crate::dto::{AddRoleDto};
 use crate::service::{RoleService, Service};
 
 pub struct RoleApi;
@@ -13,6 +13,8 @@ impl WebApi for RoleApi {
         cfg.service(get_all);
         cfg.service(get_by_id);
         cfg.service(add);
+        cfg.service(update);
+        cfg.service(soft_delete_by_id);
     }
 }
 
@@ -33,13 +35,22 @@ async fn get_by_id(id: web::Path<String>, factory: web::Data<ServiceFactory<'_>>
 #[post("/role")]
 pub async fn add(role: web::Json<AddRoleDto>, factory: web::Data<ServiceFactory<'_>>) -> impl Responder {
     let role = role.into_inner();
-    if role.realms.len() == 0 {
-        let e = ProblemDetails::new(StatusCode::BAD_REQUEST, "Missing realms")
-            .with_detail("A role requires at least one realm in order to be added");
-        return HttpResponse::BadRequest().json(e);
-    }
 
     let service: RoleService = factory.get_transient();
-    let result = service.add(role.name, role.max, role.realms).await;
+    let result = service.add(role.name, role.max, role.realm).await;
     HttpContext::accepted(result)
+}
+
+#[patch("/role")]
+pub async fn update(role: web::Json<RoleUpdate>, factory: web::Data<ServiceFactory<'_>>) -> impl Responder {
+    let service: RoleService = factory.get_transient();
+    let result = service.update(role.into_inner()).await;
+    HttpContext::accepted(result)
+}
+
+#[delete("/role/{id}")]
+pub async fn soft_delete_by_id(id: web::Path<String>, factory: web::Data<ServiceFactory<'_>>) -> impl Responder {
+    let service: RoleService = factory.get_transient();
+    let result = service.soft_delete_by_id(id.as_str()).await;
+    HttpContext::no_content(result)
 }
